1/disc/AdaParser.py
# Generated from Ada.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AdaParser ( Parser ):

    grammarFileName = "Ada.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'abs'", "'all'", "'and'", "'array'", 
                     "'at'", "'begin'", "'body'", "'case'", "'constant'", 
                     "'declare'", "'do'", "'else'", "'elsif'", "'end'", 
                     "'exit'", "'for'", "'function'", "'if'", "'in'", "'is'", 
                     "'loop'", "'mod'", "'new'", "'not'", "'null'", "'of'", 
                     "'or'", "'others'", "'package'", "'pragma'", "'private'", 
                     "'procedure'", "'range'", "'record'", "'return'", "'reverse'", 
                     "'subtype'", "'then'", "'type'", "'use'", "'when'", 
                     "'while'", "'with'", "'xor'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'='", "'/='", "'<'", "'>'", "'<='", 
                     "'>='", "'<>'", "':='", "'&'", "'**'", "','", "';'", 
                     "':'", "'('", "')'", "'['", "']'", "'.'", "'..'", "'=>'" ]

    symbolicNames = [ "<INVALID>", "ABS", "ALL", "AND", "ARRAY", "AT", "BEGIN", 
                      "BODY", "CASE", "CONSTANT", "DECLARE", "DO", "ELSE", 
                      "ELSIF", "END", "EXIT", "FOR", "FUNCTION", "IF", "IN", 
                      "IS", "LOOP", "MOD", "NEW", "NOT", "NULL", "OF", "OR", 
                      "OTHERS", "PACKAGE", "PRAGMA", "PRIVATE", "PROCEDURE", 
                      "RANGE", "RECORD", "RETURN", "REVERSE", "SUBTYPE", 
                      "THEN", "TYPE", "USE", "WHEN", "WHILE", "WITH", "XOR", 
                      "ID", "ADD", "SUB", "MUL", "DIV", "EQUALS", "NOTEQUALS", 
                      "LT", "GT", "LTE", "GTE", "BOX", "ASSIGN", "CONCAT", 
                      "POW", "COMMA", "SEMICOLON", "COLON", "LPAREN", "RPAREN", 
                      "LEFT_BRACKET", "RIGHT_BRACKET", "PERIOD", "DOT_DOT", 
                      "ARROW", "INT", "FLOAT", "CHAR", "STRING", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_package_declaration = 1
    RULE_package_import = 2
    RULE_package_use = 3
    RULE_subprogram_declaration = 4
    RULE_subprogram_specification = 5
    RULE_subprogram_head = 6
    RULE_subprogram_body = 7
    RULE_subunit = 8
    RULE_type_declaration = 9
    RULE_type_definition = 10
    RULE_enumeration_type_definition = 11
    RULE_array_type_definition = 12
    RULE_index_subtype_definition = 13
    RULE_subtype_mark = 14
    RULE_component_subtype_definition = 15
    RULE_record_type_definition = 16
    RULE_component_list = 17
    RULE_component_declaration = 18
    RULE_subtype_definition = 19
    RULE_subtype_indication = 20
    RULE_constant_declaration = 21
    RULE_variable_declaration = 22
    RULE_expression = 23
    RULE_relation = 24
    RULE_relational_operator = 25
    RULE_simple_expression = 26
    RULE_unary_adding_operator = 27
    RULE_binary_adding_operator = 28
    RULE_term = 29
    RULE_factor = 30
    RULE_primary = 31
    RULE_aggregate = 32
    RULE_element_association = 33
    RULE_qualified_expression = 34
    RULE_function_call = 35
    RULE_actual_parameter = 36
    RULE_assignment_statement = 37
    RULE_target = 38
    RULE_procedure_call_statement = 39
    RULE_sequence_of_statements = 40
    RULE_statement = 41
    RULE_simple_statement = 42
    RULE_if_statement = 43
    RULE_condition = 44
    RULE_case_statement = 45
    RULE_case_statement_alternative = 46
    RULE_choice_list = 47
    RULE_loop_statement = 48
    RULE_iteration_scheme = 49
    RULE_basic_loop = 50
    RULE_for_loop = 51
    RULE_discrete_range = 52
    RULE_range = 53
    RULE_while_loop = 54
    RULE_begin_end_block = 55
    RULE_exit_statement = 56
    RULE_return_statement = 57
    RULE_null_statement = 58

    ruleNames =  [ "program", "package_declaration", "package_import", "package_use", 
                   "subprogram_declaration", "subprogram_specification", 
                   "subprogram_head", "subprogram_body", "subunit", "type_declaration", 
                   "type_definition", "enumeration_type_definition", "array_type_definition", 
                   "index_subtype_definition", "subtype_mark", "component_subtype_definition", 
                   "record_type_definition", "component_list", "component_declaration", 
                   "subtype_definition", "subtype_indication", "constant_declaration", 
                   "variable_declaration", "expression", "relation", "relational_operator", 
                   "simple_expression", "unary_adding_operator", "binary_adding_operator", 
                   "term", "factor", "primary", "aggregate", "element_association", 
                   "qualified_expression", "function_call", "actual_parameter", 
                   "assignment_statement", "target", "procedure_call_statement", 
                   "sequence_of_statements", "statement", "simple_statement", 
                   "if_statement", "condition", "case_statement", "case_statement_alternative", 
                   "choice_list", "loop_statement", "iteration_scheme", 
                   "basic_loop", "for_loop", "discrete_range", "range", 
                   "while_loop", "begin_end_block", "exit_statement", "return_statement", 
                   "null_statement" ]

    EOF = Token.EOF
    ABS=1
    ALL=2
    AND=3
    ARRAY=4
    AT=5
    BEGIN=6
    BODY=7
    CASE=8
    CONSTANT=9
    DECLARE=10
    DO=11
    ELSE=12
    ELSIF=13
    END=14
    EXIT=15
    FOR=16
    FUNCTION=17
    IF=18
    IN=19
    IS=20
    LOOP=21
    MOD=22
    NEW=23
    NOT=24
    NULL=25
    OF=26
    OR=27
    OTHERS=28
    PACKAGE=29
    PRAGMA=30
    PRIVATE=31
    PROCEDURE=32
    RANGE=33
    RECORD=34
    RETURN=35
    REVERSE=36
    SUBTYPE=37
    THEN=38
    TYPE=39
    USE=40
    WHEN=41
    WHILE=42
    WITH=43
    XOR=44
    ID=45
    ADD=46
    SUB=47
    MUL=48
    DIV=49
    EQUALS=50
    NOTEQUALS=51
    LT=52
    GT=53
    LTE=54
    GTE=55
    BOX=56
    ASSIGN=57
    CONCAT=58
    POW=59
    COMMA=60
    SEMICOLON=61
    COLON=62
    LPAREN=63
    RPAREN=64
    LEFT_BRACKET=65
    RIGHT_BRACKET=66
    PERIOD=67
    DOT_DOT=68
    ARROW=69
    INT=70
    FLOAT=71
    CHAR=72
    STRING=73
    LINE_COMMENT=74
    BLOCK_COMMENT=75
    WS=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def package_import(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Package_importContext)
            else:
                return self.getTypedRuleContext(AdaParser.Package_importContext,i)


        def package_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Package_declarationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Package_declarationContext,i)


        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_declarationContext,i)


        def getRuleIndex(self):
            return AdaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AdaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8800924991488) != 0):
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [43]:
                    self.state = 118
                    self.package_import()
                    pass
                elif token in [29]:
                    self.state = 119
                    self.package_declaration()
                    pass
                elif token in [17, 32]:
                    self.state = 120
                    self.subprogram_declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(AdaParser.PACKAGE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.ID)
            else:
                return self.getToken(AdaParser.ID, i)

        def IS(self):
            return self.getToken(AdaParser.IS, 0)

        def END(self):
            return self.getToken(AdaParser.END, 0)

        def SEMICOLON(self):
            return self.getToken(AdaParser.SEMICOLON, 0)

        def package_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Package_declarationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Package_declarationContext,i)


        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_declarationContext,i)


        def subprogram_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_bodyContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_bodyContext,i)


        def subunit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.SubunitContext)
            else:
                return self.getTypedRuleContext(AdaParser.SubunitContext,i)


        def getRuleIndex(self):
            return AdaParser.RULE_package_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_declaration" ):
                listener.enterPackage_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_declaration" ):
                listener.exitPackage_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = AdaParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_package_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(AdaParser.PACKAGE)
            self.state = 127
            self.match(AdaParser.ID)
            self.state = 128
            self.match(AdaParser.IS)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4831969280) != 0):
                self.state = 133
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 129
                    self.package_declaration()
                    pass

                elif la_ == 2:
                    self.state = 130
                    self.subprogram_declaration()
                    pass

                elif la_ == 3:
                    self.state = 131
                    self.subprogram_body()
                    pass

                elif la_ == 4:
                    self.state = 132
                    self.subunit()
                    pass


                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(AdaParser.END)
            self.state = 139
            self.match(AdaParser.ID)
            self.state = 140
            self.match(AdaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_importContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(AdaParser.WITH, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.ID)
            else:
                return self.getToken(AdaParser.ID, i)

        def PERIOD(self):
            return self.getToken(AdaParser.PERIOD, 0)

        def SEMICOLON(self):
            return self.getToken(AdaParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_package_import

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_import" ):
                listener.enterPackage_import(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_import" ):
                listener.exitPackage_import(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_import" ):
                return visitor.visitPackage_import(self)
            else:
                return visitor.visitChildren(self)




    def package_import(self):

        localctx = AdaParser.Package_importContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_package_import)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(AdaParser.WITH)
            self.state = 143
            self.match(AdaParser.ID)
            self.state = 144
            self.match(AdaParser.PERIOD)
            self.state = 145
            self.match(AdaParser.ID)
            self.state = 146
            self.match(AdaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_useContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(AdaParser.USE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.ID)
            else:
                return self.getToken(AdaParser.ID, i)

        def PERIOD(self):
            return self.getToken(AdaParser.PERIOD, 0)

        def SEMICOLON(self):
            return self.getToken(AdaParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_package_use

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_use" ):
                listener.enterPackage_use(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_use" ):
                listener.exitPackage_use(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_use" ):
                return visitor.visitPackage_use(self)
            else:
                return visitor.visitChildren(self)




    def package_use(self):

        localctx = AdaParser.Package_useContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_package_use)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(AdaParser.USE)
            self.state = 149
            self.match(AdaParser.ID)
            self.state = 150
            self.match(AdaParser.PERIOD)
            self.state = 151
            self.match(AdaParser.ID)
            self.state = 152
            self.match(AdaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_specification(self):
            return self.getTypedRuleContext(AdaParser.Subprogram_specificationContext,0)


        def getRuleIndex(self):
            return AdaParser.RULE_subprogram_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_declaration" ):
                listener.enterSubprogram_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_declaration" ):
                listener.exitSubprogram_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_declaration" ):
                return visitor.visitSubprogram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_declaration(self):

        localctx = AdaParser.Subprogram_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subprogram_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.subprogram_specification()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_specificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_head(self):
            return self.getTypedRuleContext(AdaParser.Subprogram_headContext,0)


        def IS(self):
            return self.getToken(AdaParser.IS, 0)

        def END(self):
            return self.getToken(AdaParser.END, 0)

        def ID(self):
            return self.getToken(AdaParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(AdaParser.SEMICOLON, 0)

        def subprogram_specification(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_specificationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_specificationContext,i)


        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_declarationContext,i)


        def begin_end_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Begin_end_blockContext)
            else:
                return self.getTypedRuleContext(AdaParser.Begin_end_blockContext,i)


        def sequence_of_statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Sequence_of_statementsContext)
            else:
                return self.getTypedRuleContext(AdaParser.Sequence_of_statementsContext,i)


        def subunit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.SubunitContext)
            else:
                return self.getTypedRuleContext(AdaParser.SubunitContext,i)


        def getRuleIndex(self):
            return AdaParser.RULE_subprogram_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_specification" ):
                listener.enterSubprogram_specification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_specification" ):
                listener.exitSubprogram_specification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_specification" ):
                return visitor.visitSubprogram_specification(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_specification(self):

        localctx = AdaParser.Subprogram_specificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subprogram_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.subprogram_head()
            self.state = 157
            self.match(AdaParser.IS)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 39621109449024) != 0):
                self.state = 163
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 158
                    self.subprogram_specification()
                    pass

                elif la_ == 2:
                    self.state = 159
                    self.subprogram_declaration()
                    pass

                elif la_ == 3:
                    self.state = 160
                    self.begin_end_block()
                    pass

                elif la_ == 4:
                    self.state = 161
                    self.sequence_of_statements()
                    pass

                elif la_ == 5:
                    self.state = 162
                    self.subunit()
                    pass


                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 168
            self.match(AdaParser.END)
            self.state = 169
            self.match(AdaParser.ID)
            self.state = 170
            self.match(AdaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_headContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(AdaParser.PROCEDURE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AdaParser.ID)
            else:
                return self.getToken(AdaParser.ID, i)

        def FUNCTION(self):
            return self.getToken(AdaParser.FUNCTION, 0)

        def RETURN(self):
            return self.getToken(AdaParser.RETURN, 0)

        def getRuleIndex(self):
            return AdaParser.RULE_subprogram_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_head" ):
                listener.enterSubprogram_head(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_head" ):
                listener.exitSubprogram_head(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_head" ):
                return visitor.visitSubprogram_head(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_head(self):

        localctx = AdaParser.Subprogram_headContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subprogram_head)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(AdaParser.PROCEDURE)
                self.state = 173
                self.match(AdaParser.ID)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(AdaParser.FUNCTION)
                self.state = 175
                self.match(AdaParser.ID)
                self.state = 176
                self.match(AdaParser.RETURN)
                self.state = 177
                self.match(AdaParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_specification(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_specificationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_specificationContext,i)


        def IS(self):
            return self.getToken(AdaParser.IS, 0)

        def END(self):
            return self.getToken(AdaParser.END, 0)

        def ID(self):
            return self.getToken(AdaParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(AdaParser.SEMICOLON, 0)

        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_declarationContext,i)


        def subprogram_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.Subprogram_bodyContext)
            else:
                return self.getTypedRuleContext(AdaParser.Subprogram_bodyContext,i)


        def subunit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AdaParser.SubunitContext)
            else:
                return self.getTypedRuleContext(AdaParser.SubunitContext,i)


        def getRuleIndex(self):
            return AdaParser.RULE_subprogram_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_body" ):
                listener.enterSubprogram_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_body" ):
                listener.exitSubprogram_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_body" ):
                return visitor.visitSubprogram_body(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_body(self):

        localctx = AdaParser.Subprogram_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subprogram_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.subprogram_specification()
            self.state = 181
            self.match(AdaParser.IS)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17 or _la==32:
                self.state = 186
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 182
                    self.subprogram_specification()
                    pass

                elif la_ == 2:
                    self.state = 183
                    self.subprogram_declaration()
                    pass

                elif la_ == 3:
                    self.state = 184
                    self.subprogram_body()
                    pass

                elif la_ == 4:
                    self.state = 185
                    self.subunit()
                    pass


                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
